--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
                 </a>
             </p>
 
-            <section class="o-row o-row--lg">
-                <div class="o-container">
-                    <figure>
-                        <img src="img/jpg/intro-img.jpg" alt="Picture of Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
-                        <figcaption>Dr. James Hamrick & Sarika Vora in their weekly team stand-up</figcaption>
+            <section class="o-row o-row--lg o-row--neutral-xxxx-light">
+                <div class="o-container u-max-width-lg">
+                    <figure class="c-figure">
+                        <img src="img/jpg/intro-img.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
+                        <figcaption class="c-figure__caption c-figure__caption--absolute">Dr. James Hamrick & Sarika Vora in their weekly team stand-up</figcaption>
                     </figure>
                 </div>
             </section>
